[gd_scene load_steps=8 format=2]

[ext_resource path="res://Common/Level/MainUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Main.gd" type="Script" id=2]
[ext_resource path="res://UI/WinScreen.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "End"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.8, 0.666667, 1 ), Color( 1, 0.8, 0.666667, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.8, 0.666667, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.8, 0.666667, 0 ), Color( 1, 0.8, 0.666667, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_clearLastLevel"
}, {
"args": [  ],
"method": "_loadLevel"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "StartLevelScore"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.8, 0.666667, 0 ), Color( 1, 0.8, 0.666667, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_clearLastLevel"
}, {
"args": [  ],
"method": "_ShowScore"
} ]
}

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="loadLevel" type="Spatial" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainUI" parent="UI" instance=ExtResource( 1 )]
visible = false

[node name="WinScreen" parent="UI" instance=ExtResource( 3 )]
visible = false

[node name="ColorRect" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 0.8, 0.666667, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/ColorRect"]
unique_name_in_owner = true
anims/End = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/Start = SubResource( 3 )
anims/StartLevelScore = SubResource( 4 )
